--- a/services/inventory/package.json
+++ b/services/inventory/package.json
@@ -5,9 +5,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register ./src/index.ts",
-    "build": "tsc && tsc-alias"
+    "build": "tsc && tsc-alias",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:prod": "prisma migrate deploy"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -19,6 +22,7 @@
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.1",
+    "prisma": "^5.22.0",
     "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
     "tsc-alias": "^1.8.10",
