--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -12,6 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^1.3.1",
+    "helmet": "^8.0.0",
     "morgan": "^1.10.0",
     "zod": "^3.23.8"
   },
