--- a/services/email/package.json
+++ b/services/email/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.16",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.1",
+    "@types/nodemailer": "^6.4.17",
     "prisma": "^5.22.0",
     "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
