email service not working via mailhog

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
       interval: 30s
       timeout: 30s
       retries: 3
+    networks:
+      - app-network
 
   pgadmin:
     image: dpage/pgadmin4
@@ -28,15 +30,23 @@ services:
     ports:
       - '5050:80'
       - '5051:443'
+    networks:
+      - app-network
 
   mailhog:
-    image: mailhog/mailhog
-    container_name: mailhog2
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: mailhog
+    restart: on-failure
     ports:
-      - "1025:1025"
-      - "8025:8025"
-    volumes: 
-      - mailhog:/var/lib/mailhog
+      - "1025:1025"  # SMTP server
+      - "8025:8025"  # Web interface
+    networks:
+      - app-network
+
 volumes:
   postgres:
-  mailhog:
+
+networks:
+  app-network:
